// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <button
    className="button"
    data-testid="btn"
  >
    order
  </button>
</div>
`;

exports[`matches snapshot 2 1`] = `
<div>
  <button
    className="button"
    data-testid="btn"
  >
    order 2
  </button>
</div>
`;
